[package]
name = "rgengine"
version = "0.1.0"
authors = ["Imota Eru <threnody96@gmail.com>"]

[dependencies]
image = "^0.21"
ggez = "0.5"
rust-crypto = "^0.2"
base64 = "0.9.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
html5ever = "^0.24"

[dependencies.rusqlite]
version = "^0.19"
features = ["bundled"]
