[package]
name = "rgengine"
version = "0.1.0"
authors = ["Imota Eru <threnody96@gmail.com>"]

[dependencies]
image = "^0.21"
rust-crypto = "^0.2"
base64 = "0.9.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
html5ever = "^0.24"

[dependencies.rusqlite]
version = "^0.19"
features = ["bundled"]

[dependencies.sdl2]
version = "^0.32"
default-features = false
features = ["image", "ttf"]
