[package]
name = "rgengine"
version = "0.1.0"
authors = ["Imota Eru <threnody96@gmail.com>"]
build = "build.rs"

[dependencies]
time = "^0.1"
image = "^0.21"
rust-crypto = "^0.2"
base64 = "0.9.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
html5ever = "^0.24"
lazy_static = "^1.4"
rand = "^0.7"
backtrace = "^0.3"
chrono = "^0.4"

[dependencies.rusqlite]
version = "^0.19"
features = ["bundled"]

[dependencies.uuid]
version = "^0.8"
features = ["v4"]

[dependencies.sdl2]
version = "^0.32"
default-features = false
features = ["image", "ttf", "mixer"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
